	* Better applet transparency
	* Option to raise buddy list on signons/signoffs
	* Formatting of incoming MSN messages	
	* Get Info from menu multiple-account-aware (thanks
	  Brian Bernas)
	* Hide and unhide functions for the filectl plugin.
	  (Thanks, Ari Pollak)
	* Added helpful stuff to the Help menu.
	* Self-aliasing from the account editor.

version 0.57 (04/25/2002):
	* New authorization method for Yahoo!
	* Polish translation updated (Thanks Przemyslaw Sulek)
	* Jabber will tell you when your buddies signed on (Thanks
	  Nathan Walp)
	* Danish translation added (Thanks, Sarauw Hansen)
	* Finnish translation update (Thanks, Tero Kuusela)
	* Japanese translation added (Thanks, Ryosuke Kutsuna)
	* Jabber improvements (Thanks, Nathan Walp)
	* More keyboard shortcuts
	* event_chat_recv takes char**'s, and event_im_recv takes
	  a *guint32 for flags
	* Secure hotmail login for MSN (thanks for the tips,
	  Scott Werndorfer)

version 0.56 (04/11/2002):
	* German translation update (Thanks Karsten Weiss)
	* Shell-like send history binded to Ctrl-Up and Ctrl-Down
	* Russian Translation Updated (thanks Grigory Bakunov)
	* libjabber upgraded to most recent stable version
	* Buddylist looks a little better
	* Fixed MSN privacy settings
	* Group deletion fix (Thanks Mark Doliner)
	* Alias/Group syncronization for Jabber (Thanks JSeymour)
 	* Fixed broken signal handling in gdm-started GNOME sessions 
	  (Thanks Jim Seymour, Vann, Robert McQueen)
	* Oscar group syncronization (Thanks, Mark Doliner)
	* ICQ Authorization via Oscar (Thanks, Mark Doliner)

version 0.55 (03/29/2002):
	* Jabber improvements (Thanks Jim Seymour)
	* Various sound cleanups (Thanks Robert McQueen)
	* Login process shown in single window (Thanks Michael 
	  Golden)
	* Can reorder your accounts in the account editor (Thanks
	  Luke Schierer)
	* Updated Dutch translation
	* Shows "mobile" icon for Oscar buddies using mobile
	  devices (Thanks Mark Doliner)